--- a/adventure_net/users/templates/users/add_user_position.html
+++ b/adventure_net/users/templates/users/add_user_position.html
@@ -1,4 +1,5 @@
-{% extends "layouts/base.html" %} {% block title %} add equipment {% endblock %}
+{% extends "layouts/base.html" %} 
+{% block title %} add user position {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
