--- a/adventure_net/users/templates/users/delete_user_position.html
+++ b/adventure_net/users/templates/users/delete_user_position.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-{% block title %} delete equipment {% endblock %}
+{% block title %} Delete user position {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
