--- a/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/add_category.html
@@ -2,21 +2,23 @@
 {% block title %} Add category {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
-{% block stylesheets %}{% endblock stylesheets %} {% block content %}
+{% block stylesheets %}{% endblock stylesheets %} 
+{% block content %}
 
 <form method="POST" action="{% url 'equipment:add_category' %}">
     {% csrf_token %}
     <div class="modal">
-    <div class="pole" >
-        <label class="pole__label">Enter equipment category name: </label>
-        <input class="pole__input" type="text" name="equipment_category_name">
-        <span>{{form.errors.equipment_category_name}}</span>
+        <h2>Add category</h2>
+        <div class="pole">
+            <label class="pole__label">Category name: </label>
+            <input class="pole__input" type="text" name="equipment_category_name">
+            <span>{{form.errors.equipment_category_name}}</span>
+        </div>
+        <div class="buttons">
+            <button class="btn" type="submit">Submit</button>
+            <!-- <button class="btn" type="reset"><a class="link link-btn" href="/equipment/category/" role="button" > Cancel </a></button> -->
+        </div>
     </div>
-    <div class="buttons">
-        <button class="btn" type="submit">Submit</button>
-        <!-- <button class="btn" type="reset"><a class="link link-btn" href="/equipment/category/" role="button" > Cancel </a></button> -->
-    </div>
-</div>
 </form>
 
 {% endblock content %}
