--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -57,14 +57,14 @@
 <!--                <a class="navbar-brand mr-5" href="contact_book/">Contact book</a>-->
                         <a class="link" href="/">Головна</a>
                         {% if user.is_authenticated %}
-                        <a class="link" href="{% url 'users:placeholders' %}">Облік коштів</a>
-                        <a class="link" href="{% url 'equipment:get_equipments' %}">Облік спорядження</a>
+                        <a class="link" href="{% url 'users:placeholders' %}">Кошти</a>
+                        <a class="link" href="{% url 'equipment:get_equipments' %}">Спорядження</a>
                         <a class="link" href="{% url 'users:club_members' %}">Члени клубу</a>
                         {% endif %}
 
                         <a class="link" href="{% url 'users:placeholders' %}">Карта</a>
-                        <a class="link" href="{% url 'users:placeholders' %}">Календар подій</a>
-                        <a class="link" href="{% url 'users:placeholders' %}">Історія походів</a>
+                        <a class="link" href="{% url 'users:placeholders' %}">Події</a>
+                        <a class="link" href="{% url 'users:placeholders' %}">Походи</a>
 
                   
                   <span class="navbar-toggler-icon"></span>
@@ -91,8 +91,7 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
+<!-- цей блок необхідно перенести у main код666 -->
             {% if messages %}
             <ul class="messages">
                 {% for message in messages %}
