--- a/adventure_net/users/templates/users/placeholders.html
+++ b/adventure_net/users/templates/users/placeholders.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-{% block title %} checker {% endblock %}
+{% block title %} Placeholder {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
