--- a/adventure_net/users/templates/users/update_account_information.html
+++ b/adventure_net/users/templates/users/update_account_information.html
@@ -1,11 +1,14 @@
 {% extends "layouts/base.html" %}
-{% block title %} Add category {% endblock %}
+{% block title %} Update account {% endblock %}
 
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} 
 
 {% block content %}
-
+<form method="POST" action="{% url 'users:update_account_information'  member.user.id %}">
+  {% csrf_token %}
+  <div class="modal">
+    <h2>Update account</h2>
 {% if form.errors %}
   <div class="alert alert-danger">
     <ul>
@@ -18,9 +21,7 @@
   </div>
 {% endif %}
 
-<form method="POST" action="{% url 'users:update_account_information'  member.user.id %}">
-  {% csrf_token %}
-  <div class="modal">
+
     <div class="pole">
     <label class="pole__label" for="{{ form.username.id_for_label }}">User name:</label
     >
