--- a/adventure_net/equipment_accounting/templates/layouts/base.html
+++ b/adventure_net/equipment_accounting/templates/layouts/base.html
@@ -62,7 +62,7 @@
                         <a class="link" href="{% url 'users:club_members' %}">Члени клубу</a>
                         {% endif %}
 
-                        <a class="link" href="{% url 'users:placeholders' %}">Карта</a>
+                        <a class="link" href="{% url 'map:map_view' %}">Карта</a>
                         <a class="link" href="{% url 'users:placeholders' %}">Події</a>
                         <a class="link" href="{% url 'users:placeholders' %}">Походи</a>
 
