--- a/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
+++ b/adventure_net/equipment_accounting/templates/equipment_accounting/detail.html
@@ -26,6 +26,7 @@
         {% endfor %}
       </ul>
       <p>Current user: {{equipment.current_user}}</p>
+      <p>Description: {{equipment.equipment_description}}</p>
      </div>
     </div>
 
