--- a/adventure_net/users/templates/users/password_reset_success.html
+++ b/adventure_net/users/templates/users/password_reset_success.html
@@ -4,11 +4,11 @@
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-
+<div class="modal">
 <h2>Пароль успішно відновлено!</h2>
 <p>Ваш пароль був успішно змінений. Тепер ви можете увійти в свій аккаунт з новим паролем.</p>
 
-
+</div>
 {% endblock content %}
 
 <!-- Специфічний JS буде тут  -->
