--- a/adventure_net/users/templates/users/main.html
+++ b/adventure_net/users/templates/users/main.html
@@ -5,8 +5,19 @@
 {% block stylesheets %}{% endblock stylesheets %} 
 
 {% block content %}
+
 <div class="modal">
+  
   <h1>{{ msg }}</h1>
+  
+  {% if messages %}
+  <ul class="messages">
+      {% for message in messages %}
+      <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+      {% endfor %}
+  </ul>
+  {% endif %}
+
 </div>
 
   {% endblock content %}
