--- a/adventure_net/users/templates/users/reset_password.html
+++ b/adventure_net/users/templates/users/reset_password.html
@@ -4,7 +4,7 @@
 <!-- Специфічний CSS буде тут -->
 {% block stylesheets %}{% endblock stylesheets %} {% block content %}
 
-
+<div class="modal">
 <h2>Відновлення пароля</h2>
 
 <form method="post" action="{% url 'users:reset_password' token=token %}">
@@ -17,7 +17,7 @@
     <input type="password" name="password" required><br>
     <input type="submit" value="Змінити пароль">
 </form>
-
+</div>
 {% endblock content %}
 
 <!-- Специфічний JS буде тут  -->
