completely did CRUD for the budget branch

--- a/adventure_net/accounting/templates/accounting/get_club_treasury.html
+++ b/adventure_net/accounting/templates/accounting/get_club_treasury.html
@@ -14,10 +14,11 @@
     {% for treasury in treasuries%}
     <li class="items-left">
       {{treasury.amount}} - {{treasury.operation_date_time}} - {{treasury.info}} - {{treasury.operation_category}} - {{treasury.operation_type}} - {{treasury.performed_by}}
-
+      {% if permission %}
       <div class="buttons">
       <a class="link" href="{% url 'accounting:chenge_club_treasury' treasury.id %}" role="button"><button class="btn btn-right" type="button"> Change</button></a>
     </div>
+    {% endif %}
     </li>
     {% endfor %}
   </ul>
